<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveExpenseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_green_dark"
        android:padding="16dp"
        android:onClick="saveExpense"
        android:textSize="@dimen/buttonTextSize"
        android:text="@string/save"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expenseSourceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textStyle="bold"
            android:textSize="@dimen/editTextSize"/>

        <Spinner
            android:id="@+id/expenseSourceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_below="@id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expenseAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textSize="@dimen/editTextSize"/>

        <EditText
            android:id="@+id/editExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/expense_amount_in_numbers"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:imeOptions="actionNext"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:layout_below="@id/secondRow"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expenseWalletLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet"
            android:textStyle="bold"
            android:textSize="@dimen/editTextSize"/>

        <Spinner
            android:id="@+id/expenseWalletSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:layout_below="@id/thirdRow"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expenseNoteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textStyle="bold"
            android:textSize="@dimen/editTextSize"/>

        <EditText
            android:id="@+id/expenseEditNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:hint="@string/wallet_description"
            android:maxLength="50"
            android:maxLines="3"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"/>

    </LinearLayout>



</RelativeLayout>