<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ru.xidv.andrst.moneymanager.MainActivity">

    <LinearLayout
        android:id="@+id/spinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:layout_toLeftOf="@id/addWalletButton"
        android:layout_toStartOf="@id/addWalletButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp">
        <!--android:layout_toLeftOf="@id/addWalletButton"-->
        <!--android:layout_toStartOf="@id/addWalletButton"-->


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/wallet"
            android:textSize="@dimen/labelTextSize"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="parent"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/addWalletButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/balanceTextViews"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/spinnerLayout"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/androidBackground"
        android:contentDescription="@string/addWallet"
        android:onClick="addWallet"
        app:srcCompat="@android:drawable/ic_input_add"/>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/incomeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#77dd77"
            android:onClick="addIncome"
            android:padding="16dp"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/income"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/expenseButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ff6961"
            android:onClick="addExpense"
            android:padding="30dp"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/expenses"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout

        android:id="@+id/balanceTextViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerLayout"
        android:layout_above="@id/buttons"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/balanceResult"
            android:textSize="@dimen/balance"/>


    </LinearLayout>



</RelativeLayout>